# iscnlp

./: .testr.conf  .travis.yml  Makefile  README.rst  circle.yml  install_git_lfs.sh  pull_lfs_files.sh  requirements.txt  setup.cfg  test-requirements.txt  tox.ini  travis_conf_git_lfs.sh
iscnlp/: __init__.py
iscnlp/_utils/: __init__.py  wx.py
iscnlp/_utils/tests/: test_utils.py
iscnlp/embedder/: __init__.py  embedder.py
iscnlp/iscnlp_data/embeddings/: hin_b3.vec  hin_c3.vec  hin_pos.vec  hin_word.vec  urd_b3.vec  urd_c3.vec  urd_pos.vec  urd_word.vec
iscnlp/iscnlp_data/parse/: hin_parse.pkl  urd_parse.pkl
iscnlp/iscnlp_data/pos/: hin_pos.pkl  urd_pos.pkl
iscnlp/mlp/: __init__.py  mlp.py
iscnlp/parser/: __init__.py  arceager.py  parser.py  pseudo_projectivity.py  template.py
iscnlp/parser/tests/: hin.txt  test_parser.py
iscnlp/tagger/: __init__.py  tagger.py
iscnlp/tagger/tests/: test_tagger.py
iscnlp/tokenizer/: __init__.py  base.py  indic_tokenizer.py  roman_tokenizer.py  tokenizer.py
iscnlp/tokenizer/data/: EMOTICONS  emoticons.txt
iscnlp/tokenizer/tests/: test_tokenizer.py
