[metadata]
name = iscnlp
summary = Natural Language tool-kit for Indian Languages 
description-file = 
    README.rst
author =
    Riyaz Ahmad Bhat
    Irshad Ahmad Bhat
author-email =
    riyaz.ah.bhat@gmail.com
    bhatirshad127@gmail.com
    riyaz.bhat@research.iiit.ac.in
    irshad.bhat@research.iiit.ac.in
maintainer-email =
    bhatirshad127@gmail.com
    irshad.bhat@research.iiit.ac.in
home-page = 
classifier =
    #Framework :: Flask
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research 
    Intended Audience :: Information Technology
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License v3 or later (GNU GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages = 
    iscnlp

[entry_points]
console_scripts =
    isc-tokenizer = iscnlp.tokenizer:main

[build-sphinx]
all_files = 1
source-dir = docs

[wheel]
universal = 1

